# CP_PFDR_graph_d1

./: CMakeLists.txt  README.md  compile_mex.m  examples.py
include/: CP_PFDR_graph_loss_d1_simplex.hpp  CP_PFDR_graph_quadratic_d1_bounds.hpp  CP_PFDR_graph_quadratic_d1_l1.hpp  PFDR_graph_loss_d1_simplex.hpp  PFDR_graph_quadratic_d1_bounds.hpp  PFDR_graph_quadratic_d1_l1.hpp  operator_norm_matrix.hpp  proj_simplex.hpp
mex/: CP_PFDR_graph_l22_d1_l1_duplex_mex.cpp  CP_PFDR_graph_l22_d1_l1_mex.cpp  CP_PFDR_graph_loss_d1_simplex_mex.cpp  CP_PFDR_graph_quadratic_d1_bounds_AtA_mex.cpp  CP_PFDR_graph_quadratic_d1_bounds_mex.cpp  CP_PFDR_graph_quadratic_d1_l1_duplex_mex.cpp  CP_PFDR_graph_quadratic_d1_l1_mex.cpp  PFDR_graph_l22_d1_bounds_mex.cpp  PFDR_graph_loss_d1_simplex_mex.cpp  compile_mex.m
mex/api/: CP_PFDR_graph_l22_d1_bounds_mex.cpp  CP_PFDR_graph_l22_d1_l1_duplex_mex.cpp  CP_PFDR_graph_quadratic_d1_l1_AtA_mex.cpp  CP_PFDR_graph_quadratic_d1_l1_duplex_mex.cpp  PFDR_graph_l22_d1_l1_mex.cpp  PFDR_graph_quadratic_d1_bounds_AtA_mex.cpp  PFDR_graph_quadratic_d1_bounds_mex.cpp  PFDR_graph_quadratic_d1_l1_AtA_mex.cpp  PFDR_graph_quadratic_d1_l1_mex.cpp
mex/doc/: CP_PFDR_graph_l22_d1_bounds_mex.m  CP_PFDR_graph_l22_d1_l1_mex.m  CP_PFDR_graph_loss_d1_simplex_mex.m  CP_PFDR_graph_quadratic_d1_bounds_AtA_mex.m  CP_PFDR_graph_quadratic_d1_bounds_mex.m  CP_PFDR_graph_quadratic_d1_l1_AtA_mex.m  CP_PFDR_graph_quadratic_d1_l1_mex.m  PFDR_graph_l22_d1_bounds_mex.m  PFDR_graph_l22_d1_l1_mex.m  PFDR_graph_loss_d1_simplex_mex.m  PFDR_graph_quadratic_d1_bounds_AtA_mex.m  PFDR_graph_quadratic_d1_bounds_mex.m  PFDR_graph_quadratic_d1_l1_AtA_mex.m  PFDR_graph_quadratic_d1_l1_mex.m
mex/include/: CP_PFDR_graph_loss_d1_simplex.hpp  CP_PFDR_graph_quadratic_d1_bounds.hpp  CP_PFDR_graph_quadratic_d1_l1.hpp  CP_PFDR_graph_quadratic_d1_l1_duplex.hpp  PFDR_graph_loss_d1_simplex.hpp  PFDR_graph_quadratic_d1_bounds.hpp  PFDR_graph_quadratic_d1_l1.hpp  block.hpp  graph.hpp
mex/src/: CP_PFDR_graph_loss_d1_simplex.cpp  CP_PFDR_graph_quadratic_d1_bounds.cpp  CP_PFDR_graph_quadratic_d1_l1.cpp  CP_PFDR_graph_quadratic_d1_l1_duplex.cpp  PFDR_graph_loss_d1_simplex.cpp  PFDR_graph_quadratic_d1_bounds.cpp  PFDR_graph_quadratic_d1_l1.cpp  operator_norm_matrix.cpp  proj_simplex_metric.cpp
octave/: compile_mex.m  example_EEG_CP.m
octave/doc/: CP_PFDR_graph_l22_d1_bounds_mex.m  CP_PFDR_graph_l22_d1_l1_mex.m  CP_PFDR_graph_loss_d1_simplex_mex.m  PFDR_graph_l22_d1_l1_mex.m  (+8 more)
python/: CMakeLists.txt  CP_PFDR_graph_quadratic_d1_l1_py.cpp  CP_quadratic_l1_py.cpp  example_EEG_CP.py  examples.py
src/: CMakeLists.txt  CP_PFDR_graph_loss_d1_simplex.cpp  CP_PFDR_graph_quadratic_d1_bounds.cpp  CP_PFDR_graph_quadratic_d1_l1.cpp  CP_PFDR_graph_quadratic_d1_l1_duplex.cpp  PFDR_graph_loss_d1_simplex.cpp  graph.cpp  maxflow.cpp  operator_norm_matrix.cpp
(+16 files in other folders)
